# olus-lang

./: README.md  TODO.md  package.yaml  stack.yaml
app/: Main.hs
assembler/: hello.asm  hello.ll
doc/: architecture.md
examples/: mccarthy91.olus  prelude.olus
olus-lang/: README.md  TODO.md  algebra.olus  banner.txt  fact.olus  olus.cabal  stack.yaml  test.olus  test.olus.bin.br
olus-lang/app/: Main.hs
olus-lang/examples/: bindtest.olus  fact.olus  hello.olus
olus-lang/src/: Binder.hs  Closure.hs  Compiler.hs  CompilerUtils.hs  Core.hs  Desugar.hs  Interpreter.hs  Intrinsics.hs  Passes.hs  Program.hs  Types.hs  Unparser.hs
olus-lang/src/Olus/Ast/: Binder.hs  Compiler.hs  Unparser.hs
olus-lang/src/Olus/Ast/Passes/: ConstantExtraction.hs  Desugar.hs  Fructase.hs
olus-lang/src/Olus/Ir/: Core.hs  Intrinsics.hs
olus-lang/src/Olus/Ir/Passes/: ConstantClosure.hs
principia-lang/: README.md  TODO.md  olus.cabal  principia-lang.cabal  stack.yaml  test.principia
principia-lang/app/: Main.hs
principia-lang/src/: Binary.hs  Binder.hs  Builtins.hs  Compiler.hs  CompilerUtils.hs  ConstantExtraction.hs  DeadCodeElimination.hs  Desugar.hs  Interpreter.hs  Intrinsics.hs  Lexer.hs  Main.hs  Parser.hs  Program.hs  Syntax.hs  Types.hs  Unparser.hs
principia-lang/test/: BinarySpec.hs
src/: Olus.hs
src/Olus/: Ast.hs  CompilerUtils.hs  Parser.hs
src/Olus/Ast/: Conversions.hs  Passes.hs  Syntax.hs
src/Olus/Ast/Conversions/: ToIr.hs  ToModule.hs  ToString.hs
src/Olus/Ast/Passes/: Binder.hs  ConstantExtraction.hs  Desugar.hs  Fructase.hs  Galactase.hs  Glucase.hs  Glucose.hs
src/Olus/Ast/Utils/: IdGen.hs
src/Olus/Interpreter/: Interpreter.hs
src/Olus/Ir/: Binary.hs  Module.hs  Passes.hs  Program.hs  Types.hs
src/Olus/Ir/Passes/: Closure.hs  DeadCodeElimination.hs  Inliner.hs
src/Olus/Parser/: Base.hs  Lexer.hs  Parser.hs
