name:                olus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/principia-lang#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type:                git
  location:            https://github.com/olus-lang/olus

library
  ghc-options:        -Wall
  exposed-modules:     Parser
                     , Unparser
                     , Binder
                     , Desugar
                     , ConstantExtraction
                     , Intrinsics
                     , Compiler
                     , Binary
                     , CompilerUtils
  other-modules:       Syntax
                     , Program
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , mtl
                     , containers
                     , bytestring
                     , binary
                     , utf8-string
                     , filepath
                     , directory

test-suite quickcheck
  ghc-options:        -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , olus
                     , hspec
                     , hspec-megaparsec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable olus
  ghc-options:        -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , olus
                     , mtl
                     , haskeline
                     , megaparsec
